table backgound color

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <hr class="liniq" color="#9400D3">
         <br>
         </div>
-        <table style="background-color: ;">
+        <table style="background-color: green ;">
             <tr>
               <p class="introduction">Potter's world - мястото за всички фенове на световноизвестните филми и книги, написани от гениалната Дж. К. Роулинг! Тук можете да 
                   откриете многообразие от информация за любимите ни герои, любопитни факти за книгите, филмите и актьорите във филма, забавни и любими на нас моменти от фимите,
