--- a/filmi.html
+++ b/filmi.html
@@ -4,7 +4,7 @@
         <title>Potter's world</title>
         <link rel="icon" href="picture/favicon (1).ico">
         <link rel="stylesheet" href="css/style.css">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div align="center">
@@ -23,18 +23,29 @@
           <div class="dropdown">
             <button class="dropbtn"><a href="filmi.html">Филмите Хари Потър</a></button>
             <div class="dropdown-content">
-            <a href="#">Хари Потър и Философският камък</a>
-            <a href="#">Хари Потър и стаята на тайните</a>
-            <a href="#">Хари Потър и затворникът от Азкабан</a>
-            <a href="#">Хари Потър и огнения бокал</a>
-            <a href="#">Хари Потър и ордена на феникса</a>
-            <a href="#">Хари Потър и нечистокръвния приц</a>
-            <a href="#">Хари Потър и даровете на смъртта, част 1</a>
-            <a href="#">Хари Потър и даровете на смъртта, част 2</a>
+            <a href="#PS">Хари Потър и Философският камък</a>
+            <a href="#COS">Хари Потър и стаята на тайните</a>
+            <a href="#POA">Хари Потър и затворникът от Азкабан</a>
+            <a href="#GOF">Хари Потър и огнения бокал</a>
+            <a href="#OOP">Хари Потър и ордена на феникса</a>
+            <a href="#HBP">Хари Потър и нечистокръвния приц</a>
+            <a href="#DH1">Хари Потър и даровете на смъртта, част 1</a>
+            <a href="#DH2">Хари Потър и даровете на смъртта, част 2</a>
               </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Героите в Хари Потър</button>
+            <button class="dropbtn"><a href="geroi.html">Героите в Хари Потър</a></button>
+            <div class="dropdown-content">
+              <a href="#HP">Хари Потър</a>
+              <a href="#HG">Хърмаяни Грейнджър</a>
+              <a href="#RW">Рон Уизли</a>
+              <a href="#HT">Учители в Хогуортс</a>
+            <a href="#WF">Семейство Уизли</a>
+            <a href="#DM">Драко Малфой</a>
+              </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn"><a href="inter_sva.html">Интересни същества</a></button>
             <div class="dropdown-content">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
@@ -42,15 +53,7 @@
               </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Интересни същества</button>
-            <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-              </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropbtn">Фантастични животни</button>
+            <button class="dropbtn"><a href="fantastic_beasts.html">Фантастични животни</a></button>
             <div class="dropdown-content">
             <a href="#">Фантастични животни и къде да ги намерим</a>
             <a href="#">Фантастични животни: престъпленията на Гринделвалд</a>
@@ -62,7 +65,7 @@
         <hr class="liniq" color="#9400D3">
         <br>
         </div>
-        <h2>Хари Потър и Философският камък (2001)</h2>
+        <h2><a id="PS">"Хари Потър и Философският камък" (2001)</a></h2>
         <hr class="hr_hover" color="#9400D3" width="40%">
         <table >
           <tr>
@@ -86,12 +89,12 @@
               дали да не го прати в Слидерин, но впечатленията на момчето от този дом не са добри, затова то през цялото време си мисли за 
               Грифиндор и именно там го праща накрая шапката. В Грифиндор са разпределени също и Рон и Хърмаяни, докато Драко Малфой, който 
               вече не крие презрението си към Хари и неговите приятели, е разпределен в Слидерин.</p></td>
-              <td><img class="chs" src="picture/7fc958575c895386c732855ab2602dc8.jpg"></td>
+              <td><img class="chs" src="picture/7fc958575c895386c732855ab2602dc8.jpg" width="150px" height="200px"></td>
           </tr>
           </table>
           <table >
           <tr>
-            <td><img class="hrh" src="picture/phpgbxply.jpg" alt="Harry, Ron and Hermione on Hogwarts Express" width="295px" height="230px"></td>
+            <td><img class="hrh" src="picture/The-trio-Harry-Potter-and-the-chamber-of-secrets-potterhead-29266030-365-4000.jpg" alt="Harry, Ron and Hermione" width="240px" height="260px"></td>
             <td class="tbl"><p >Триглаво куче, кръстено от Хагрид Пухчо, охранява отвор в пода на забранения коридор в училището. Тримата герои дълго 
               обсъждат какво може да се пази там и в крайна сметка решават, че там се намира легендарният Философски камък, изработен от 
               Никола Фламел. Смята се, че с този камък човек може да произведе еликсир на живота, който да му донесе безсмъртие, затова 
@@ -109,6 +112,137 @@
               
           </tr>
         </table>
+        <h2><a id="COS">„Хари Потър и Стаята на тайните“ (2002)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+          <tr>
+            <td class="tbl"><p>Снимките на „Стаята на тайните“ започват на 19 ноември 2001 г. в Англия – само три дни след премиерата на „Философският камък“. В 
+              главните роли отново са Даниел Радклиф (Хари), Рупърт Гринт (Рон) и Ема Уотсън (Хърмаяни). Новите попълнения са: известният актьор, сценарист
+               и режисьор Кенет Брана, който играе новия преподавател по защита срещу Черните изкуства Гилдрой Локхарт, Джейсън Айзъкс, в ролята на студения
+                и отмъстителен Малфой-баща, Бони Райт – сестрата на Рон, която изиграва съществена роля в събитията, разтърсващи магическото училище, както
+                 и Мириам Марголис, която играе преподавателката професор Спраут.</p>
+                <p>Хари, Рон и Хърмаяни се завръщат за втората си година в училището за магия и вълшебство „Хогуортс“, която се оказва по-трудна от предната. 
+              Стаята на тайните е отворена, а последствията от това са вкаменени ученици и призраци от освободеното чудовище. Хари трябва да се изправи срещу 
+              твърденията, че е наследник на Салазар Слидерин (основател на дом Слидерин), след като научава, че говори змийски език, подобно на него. Малкият 
+              магьосник открива мистериозен дневник, който го вкарва в капана на Стаята на тайните, но също така разкрива и част от миналото на младия Волдемор.</p></td>
+            <td rowspan="2"><img src="picture/p_6876.jpg" alt="Chamberofsecrets" width="330px" height="220px"></td>
+          </tr>
+        </table>
+        <h2><a id="POA">„Хари Потър и Затворникът от Азкабан“ (2004)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+        <tr>
+          <td><img src="picture/707a12479a38e3b16d783ebeab36e1105888e28c.jpeg" alt="POA" width="300px" height="200px"></td>
+          <td><p>Преди да замине за третата си година в „Хогуортс“, Хари Потър е подложен на изпитанието да изтърпи леля си Мардж за цяла седмица. Момчето обаче не успява 
+            да сдържи емоциите си и прави магия, след което бяга от улица „Привит Драйв“ и стига до Лондон с автобуса „Среднощният Рицар“. Въпреки че извършва магия извън 
+            училището, от Министерството на магията не го наказват, като по-късно разбира, че това може би се дължи на страха от избягалия затворник Сириус Блек. Всички 
+            са притеснени, че той иска да убие Хари. Момчето се връща в училище, но е доста обезпокоено от честите появи на странно куче, представляващо поличба за скорошна 
+            смърт. Един ден случайно научава, че Сириус Блек е бил приятел на родителите му и ги е предал, ставайки причина за смъртта им. Оттогава Хари не е сигурен какво 
+            да прави, и воден от желанието си за отмъщение, се забърква в неприятни и дори опасни ситуации. Но дали всъщност Затворника от Азкабан има вина за престъпленията 
+            и е станал част от по-голям и злокобен план на Лорд Волдемор? Дали злите поличби ще се сбъднат? Ще се върне ли слугата при господаря си, за да му помогне да 
+            вдигне глава отново?</p></td>
+        </tr>
+        </table>
+        <h2><a id="GOF">„Хари Потър и Огненият бокал“ (2005)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+          <tr>
+            <td><img src="picture/6sASqcdrEHXxUhA3nFpjrRecPD2.jpg" alt="" height="270px" width="200px">
+            </td>
+            <td><p>Книгата започва със Световното първенство по куидич – хиляди любители на този спорт идват на мача Ирландия срещу България. Победител е Ирландия, въпреки че 
+              за България играе най-добрият търсач в света – Виктор Крум. След световното по куидич учениците от „Хогуортс“, сред които и Хари, Рон и Хърмаяни, се връщат в
+               училище. Тази година училището е домакин на Тримагическия турнир. В него участват Виктор Крум от „Дурмщранг“, Фльор Делакор от академия „Бобатон“ и Седрик 
+               Дигъри от „Хогуортс“. Огненият Бокал е този, който определя участниците, но има двама, които са достойни за турнира от „Хогуортс“ – Седрик и Хари. В турнира 
+               има 3 изпитания – Змейове, Езеряни и Лабиринт. В края на турнира Седрик е убит от слугата на Волдемор Опаш по време на третото изпитание, а Хари се изправя 
+               срещу Черния Лорд. Младият магьосник успява да го победи с помощта на майка си и баща си, но Волдемор успява да възвърне мощта си. Хари се спасява благодарение 
+               на летекод (който го е завел в Литъл Уингинг), като се магипортира заедно с тялото на мъртвия Седрик. Корнелиус Фъдж и Министерството на магията не искат да 
+               всяват паника и затова заявяват, че Волдемор не се е завърнал. Така за Хари и професор Дъмбълдор, който му е повярвал, предстои една тежка година...</p></td>
+            <td><img src="picture/811601-1-tifec.jpg" alt="Viktor Krum" height="270px" width="220px"></td>
+          </tr>
+        </table>
+        <h2><a id="OOP">„Хари Потър и Орденът на феникса“ (2007)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+          <tr>
+            <td><p>В началото на книгата Хари Потър и братовчед му Дъдли Дърсли са нападнати от диментори, като момчето успява да ги отблъсне със сложно заклинание. На 
+              невръстните магьосници е забранено правенето на магии извън училището за магия и вълшебство „Хогуортс“, затова героят е изправен пред изключване и дори 
+              пред нещо по-страшно – да загуби магията си завинаги. Впоследствие Хари е оправдан по всички обвинения.<br>
+              При пристигането в „Хогуортс“ се разбира, че Министерството на магията се опитва да вземе властта в древното училище. То назначава като преподавател по Защита 
+              срещу Черните изкуства Долорес Ъмбридж – зла и властолюбива жена, която заема висок пост в министерството и в училището като „Велика инквизиторка на Хогуортс“. 
+              Ъмбридж налага на Хари поредица от жестоки наказания само заради твърдението му, че Лорд Волдемор (което е вярно) се е завърнал.</p>
+              <p>В самия край на книгата Хари получава видение, че кръстникът му Сириус Блек е отвлечен и измъчван от Волдемор. Главният герой повежда членовете на ВОДА – тайна 
+                защитна организация, създадена от Хари, към Отдел Мистерии (известно още като войнството да Дъмбълдор). Там той открива тайнственото пророчество, направено от 
+                Сибила Трелони за него и Черния лорд. В започналата битка със смъртожадните се включва и Орденът на феникса, тайна организация от магьосници, която цели да 
+                издири и унищожи Волдемор, начело с Албус Дъмбълдор. В битката загива Сириус Блек, убит от своята братовчедка, която е смъртожадна също. Министерството 
+                най-накрая признава официално, че Волдемор се е завърнал. Хари разбира от професор Дъмбълдор защо Волдемор се е опитал да го убие преди четиринадесет години.</p></td>
+          <td><img src="picture/Dumbledore's_Army.jpg" alt="DA" height="220px" width="320px"></td>
+         </tr>
+        </table>
+        <h2><a id="HBP">„Хари Потър и Нечистокръвния принц“ (2009)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+          <tr>
+            <td><img src="picture/52-facts-about-harry-potter-8.jpg" alt="DM" width="320px" height="210px"></td>
+            <td><p>Вечерта, в която историята започва, Сивиръс Снейп дава „неразрушима клетва“ на майката на Драко Малфой Нарциса, която цели да предпазва Драко и да му 
+              помага в мисиите му, които не са ясни за момента. Свидетел е Белатрикс Лестранж – сестрата на Нарциса. <br>
+              Поради повишената активност на смъртожадните, защитата на „Хогуортс“ е повишена. Снейп получава правото да преподава по желания от него предмет – Защита 
+              срещу черните изкуства – докато Албус Дъмбълдор и Хари Потър издирват пенсионирания магьосник Хорас Слъгхорн, за да замени Снейп като учител по отвари. В 
+              първия им час по отвари Слъгхорн дава назаем един стар учебник, който е бил собственост на някой, назовал се с името Нечистокръвния принц. Ръчно 
+              написаните бележки помагат на Хари да бъде по-добър даже и от Хърмаяни, която е най-добрата в часовете по отвари. Доброто му представяне в първия 
+              час по отвари му спечелва дванадесет часова доза от Феликс Фелицис.</p></td>
+            <td><img src="picture/images.jpg" width="320px" height="210px" ></td>
+          </tr>
+          <tr>
+            <td><img src="picture/91464-1541662720.jpg" alt="DM" width="320px" height="210px"></td>
+            <td><p>В серия от частни уроци, Дъмбълдор показва редица спомени на Хари, които хвърлят светлина върху миналото на Волдемор. Когато виждат последния 
+              спомен, притежание на Слъгхорн и осигурен от Хари посредством Феликс Феликсис, Дъмбълдор предполага, че Волдемор е разделил душата си на седем части 
+              (хоркрукси), като скрива шест от тях.<br>
+              На връщане в „Хогуортс“, след като успешно са унищожили един от хоркруксите, виждат Черния знак в небето над замъка. Докато разследват, те са изненадани 
+              от Драко Малфой. Дъмбълдор кара Хари да се скрие, позволявайки му да бъде свидетел на всичките неща, които ще се случат. 
+                През това време Малфой го обезоръжава и му разкрива, че е позволил на смъртожадните да влязат в „Хогуортс“, използвайки Нужната стая.<br>
+              Скоро други смъртожадни се появяват и подтикват Драко да изпълни мисията си, но той се разколебава. Снейп се появява малко след това и убива Дъмбълдор 
+              със заклинанието „Авада Кедавра“. Смъртожадните избягват. След очевидната смърт на Дъмбълдор Хари може преследва Снейп и след краткотраен двубой 
+              между двамата разбира, че именно Снейп е Нечистокръвния принц. Снейп избягва с Малфой.</p></td>
+            <td><img src="picture/maxresdefault.jpg" alt="Dumbledore dying" height="210px" width="320px"></td>
+          </tr>
+        </table>
+        <h2><a id="DH1">„Хари Потър и даровете на смъртта: първа част“ (2010)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+          <tr>
+            <td><img src="picture/gallery_31107.jpg" height="210px" width="320px"></td>
+            <td><p>Лорд Волдемор и смъртожадните планират да устроят засада на Хари, когато той напуска дома на семейство Дърсли, придружен от Ордена на феникса. 
+              За да объркат Лорда, шестима от Ордена изпиват многоликова отвара и стават седем Потъровци (с истинския). По някое време в гонитбата Волдемор 
+              разбира кой е истинският Хари и прави заклинание на него, но се случва нещо странно. В битката е убита  
+              совата на Хари – Хедуиг, а Джордж Уизли губи ухото си. Останалите пристигат в дома на семейство Уизл). Там Хари остава за сватбата 
+              на Бил Уизли и Фльор Делакор. Вечерта, в която момчето има рожден ден, се появява министърът на магията, за да връчи на Рон, Хърмаяни и Хари това, 
+              което е завещал Дъмбълдор на всеки един от тях, съответно Загасителя на Рон, книгата „Приказки на Барда Бийдъл“ (от която разбират за трите 
+              дарове на смъртта, впоследствие потвърдени и от бащата на Луна Лавгууд) на Хърмаяни, а на Хари – златния снич, който той улавя в първия си 
+              куидичен мач.
 
+              На сватбата на Бил и Фльор е също и Елфиъс Дож, който малко преди това е написал статия за 
+              трагичната съдба на Дъмбълдор в ранните му години, която по-късно е оплюта и опровергана от Рита Скийтър в книгата ѝ „Животът и лъжите 
+              на Албус Дъмбълдор“. Точно покрай това започва спор между Дож и лелята на Рон, Мюриъл, по време на който Хари разбира, че Батилда 
+              Багшот, авторка на „История на магията“ и приятелка на Дъмбълдор, е живяла в Годрикс Холоу, но че също така и Дъмбълдор е живял там. 
+              По средата на сватбеното тържество се появява покровителят на Кингзли 
+              Шакълболт, който съобщава, че министерството е паднало, Руфъс Скримджър е мъртъв, а смъртожадните идват. </p></td>
+          </tr>
+        </table>
+        <h2><a id="DH2">„Хари Потър и даровете на смъртта: първа част“ (2011)</a></h2>
+        <hr class="hr_hover" color="#9400D3" width="40%">
+        <table>
+          <tr>
+            <td><img src="picture/1865_bg.jpg" alt="" height="180px" width="130px"></td>
+            <td><p> Малко след съобщението от Шакълболт пристигат 
+              и смъртожадните, но Хари, Хърмаяни и Рон успяват да се магипортират, където биват проследени от смъртожадни. Така те започват 
+              последното си пътуване с цел да изпълнят заръката на Дъмбълдор да унищожат останалите хоркрукси на Волдемор <br>
+              Сблъсъкът между доброто и злото наближава, когато Хари, Рон и Хърмаяни се подготвят за финалната битка срещу Лорд Волдемор, който вече притежава 
+              Старшата пръчка. Хари вече е пораснал след всичко което му се е случило, търсейки и унищожавайки хоркрукси, и сега има мисията да оттърве света от злото. 
+              По време на търсенето, приятелите трябва да се завърнат в така обичаното от тях училище „Хогуортс“, за да открият поредния хоркрукс. Хари и Волдемор най-после се срещат
+              в замъка за една епична битка, където тъмните сили най-накрая може да открият равен противник. 
+            </p></td>
+            <td><img src="picture/download (1).jfif" alt="" height="190px" width="150px"></td>
+          </tr>
+        </table>
     </body>
 </html>
