--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <title>Potter's world</title>
         <link rel="icon" href="picture/favicon (1).ico">
         <link rel="stylesheet" href="css/style.css">
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div align="center">
         <table width="100%">
           <tr>
-              <td><img src="picture/HP.png" height="150" width="150"></td>
+              <td><img src="picture/HP.png" height="150" width="150" ></td>
               <td class="zaglavie">
                   <h1>Светът на Хари Потър</h1>
               </td>
@@ -34,7 +34,18 @@
               </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Героите в Хари Потър</button>
+            <button class="dropbtn"><a href="geroi.html">Героите в Хари Потър</a></button>
+            <div class="dropdown-content">
+                <a href="HP">Хари Потър</a>
+                <a href="HG">Хърмаяни Грейнджър</a>
+                <a href="RW">Рон Уизли</a>
+                <a href="#HT">Учители в Хогуортс</a>
+            <a href="#WF">Семейство Уизли</a>
+            <a href="#DM">Драко Малфой</a>
+              </div>
+          </div>
+          <div class="dropdown">
+            <button class="dropbtn"><a href="inter_sva.html">Интересни същества</a></button>
             <div class="dropdown-content">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
@@ -42,15 +53,7 @@
               </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Интересни същества</button>
-            <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-              </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropbtn">Фантастични животни</button>
+            <button class="dropbtn"><a href="fantastic_beasts.html">Фантастични животни</a></button>
             <div class="dropdown-content">
             <a href="#">Фантастични животни и къде да ги намерим</a>
             <a href="#">Фантастични животни: престъпленията на Гринделвалд</a>
@@ -62,7 +65,7 @@
         <hr class="liniq" color="#9400D3">
         <br>
         </div>
-        <table style="background-color: green ;">
+        <table style="background-color: ;">
             <tr>
               <p class="introduction">Potter's world - мястото за всички фенове на световноизвестните филми и книги, написани от гениалната Дж. К. Роулинг! Тук можете да 
                   откриете многообразие от информация за любимите ни герои, любопитни факти за книгите, филмите и актьорите във филма, забавни и любими на нас моменти от фимите,
